--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 body {
     font-family: 'Inter' , sans-serif;
     padding: 20px;
-    background-color: #bebebe;
+    background-color: #8d8d8d;
 }
 
 .container {
     max-width: 1200px;
      margin: 40px auto;
-     background-color: #e8e8e8;
+     background-color: #c9c4c4;
      padding: 20px;
      border-radius: 8px;
      box-shadow: 0 2px 10px rgb(0, 0,0,0.5);
